# localreview

./: .gitignore  Cargo.toml  PRODUCT_SPEC.md  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: agent_stdio.rs  cli_json.rs
crates/diff/: Cargo.toml
crates/diff/src/: lib.rs
crates/difftastic/: Cargo.toml  PACKAGING.md
crates/difftastic/fixtures/: difftastic-0.69.0-rust.json
crates/difftastic/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/git/: Cargo.toml
crates/git/src/: lib.rs  pool.rs
crates/github/: Cargo.toml
crates/github/src/: client.rs  lib.rs  pull_request.rs  review.rs
crates/highlight/: Cargo.toml
crates/highlight/fixtures/: example.js  example.json  example.md  example.py  example.rs  example.tsx
crates/highlight/src/: lib.rs
crates/persistence/: Cargo.toml
crates/persistence/src/: lib.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: agent.rs  auth.rs  frame.rs  lib.rs  local.rs  paths.rs  reverse.rs
crates/service/: Cargo.toml
crates/service/src/: config.rs  github.rs  lib.rs
crates/ssh/: Cargo.toml
crates/ssh/src/: bootstrap.rs  client.rs  lib.rs  reverse.rs
crates/tools/: Cargo.toml
crates/tools/src/: lib.rs
docs/: CLI_AUTOMATION.md
performance/: README.md
performance/artifacts/agentmax-ui-after/: disclosure-ax.jsonl  individual-ax.jsonl  scroll-webcontent-stacks.out  scroll.jsonl  webcontent-stacks.out
performance/artifacts/latest/: controller-after.json  controller-before.json  controller.json  environment.txt  profile-controller.json  stacks.out
scripts/: check-performance.py  macos-ui-performance.jxa  package-difftastic-macos.sh  run-bundle-ui-performance.sh  run-release-performance.sh  sample-to-flamegraph.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: activation.rs  api.rs  controller.rs  lib.rs  main.rs  perf_harness.rs  perf_main.rs  perf_trace.rs  rpc.rs  symbols.rs
ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.persistence.test.ts  App.svelte  SymbolNavigationWindow.svelte  app.css  main.ts
ui/src/lib/: VirtualDiff.svelte  VirtualFileList.svelte  WorkspaceRail.svelte  api.test.ts  api.ts  components.test.ts  focusTrap.ts  symbolNavigation.components.test.ts  symbolNavigation.test.ts  symbolNavigation.ts  syntax.test.ts  syntax.ts  types.ts  virtual.test.ts  virtual.ts
