[workspace]
members = ["crates/*", "src-tauri"]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.78"
license = "MIT"
authors = ["LocalReview contributors"]

[workspace.dependencies]
anyhow = "1.0.95"
blake3 = "1.5.5"
chrono = { version = "0.4.39", features = ["serde"] }
hex = "0.4.3"
notify = "8.2.0"
roaring = "0.10.10"
rusqlite = { version = "0.32.1", features = ["backup", "bundled", "chrono", "uuid"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
sha2 = "0.10.8"
similar = "2.6.0"
tempfile = "3.15.0"
thiserror = "2.0.9"
toml = "0.8.19"
tree-sitter = "=0.24.7"
tree-sitter-bash = "=0.23.3"
# 0.24.2 moved to Tree-sitter ABI 15; 0.23.4 is the newest ABI 14 release
# compatible with the pinned 0.24 runtime.
tree-sitter-c = "=0.23.4"
tree-sitter-cpp = "=0.23.4"
tree-sitter-css = "=0.23.2"
tree-sitter-go = "=0.23.4"
tree-sitter-highlight = "=0.24.7"
tree-sitter-html = "=0.23.2"
tree-sitter-java = "=0.23.5"
tree-sitter-javascript = "=0.23.1"
tree-sitter-json = "=0.23.0"
tree-sitter-md = "=0.3.2"
tree-sitter-python = "=0.23.6"
tree-sitter-rust = "=0.23.0"
tree-sitter-starlark = "=1.3.0"
# 0.7.1+ are generated against Tree-sitter ABI 15, while our deliberately
# pinned 0.24 runtime supports ABI 13-14.  0.7.0 is the newest Swift grammar
# built for ABI 14 and is therefore the safe compatible release.
tree-sitter-swift = "=0.7.0"
tree-sitter-toml-ng = "=0.7.0"
tree-sitter-typescript = "=0.23.2"
tree-sitter-yaml = "=0.7.2"
uuid = { version = "1.11.0", features = ["v4", "serde"] }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_debug_implementations = "warn"

[profile.dev]
debug = 1
