[package]
name = "localreview-git"
version = "0.1.8"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
chrono.workspace = true
localreview-domain = { path = "../domain" }
localreview-tools = { path = "../tools" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
