[package]
name = "localreview-protocol"
version = "0.1.6"
edition = "2021"
license = "MIT"
description = "Versioned, authenticated RPC types for LocalReview desktop, CLI, and SSH companion."

[dependencies]
hex = "0.4"
hmac = "0.12"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
