[package]
name = "localreview-ssh"
version = "0.1.8"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Typed SSH companion transport and managed reverse forwarding for LocalReview."

[dependencies]
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
hex.workspace = true
getrandom = "0.2"
localreview-protocol = { path = "../protocol" }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
